force-app/main/default/objects/Contact_Channel_Score__c/Contact_Channel_Score__c.object-meta.xml
<CustomObject>
    <label>Contact Channel Score</label>
    <nameField>
        <displayFormat>SC-{0000}</displayFormat>
        <label>Channel Score Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contact Channel Scores</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>