force-app/main/default/objects/Contact_Channel_Score__c/fields/CampaignId__c.field-meta.xml
<CustomField>
    <fullName>CampaignId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Contact Channel Scores</relationshipLabel>
    <relationshipName>Contact_Channel_Scores</relationshipName>
    <type>Lookup</type>
</CustomField>