force-app/main/default/objects/Contact_Channel_Score__c/fields/Contact_Consultant__c.field-meta.xml
<CustomField>
    <fullName>Contact_Consultant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact/Consultant</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Channel_Scores</relationshipName>
    <type>Lookup</type>
</CustomField>