force-app/main/default/objects/Contact_Channel_Score__c/fields/Engagement_Score__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Score__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Engagement Score</label>
    <referenceTo>Contact_Engagement_Score__c</referenceTo>
    <relationshipName>Channel_Scores</relationshipName>
    <type>Lookup</type>
</CustomField>