force-app/main/default/objects/Contact_Channel_Score__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Contact_Consultant__c</columns>
    <columns>Engagement_Score__c</columns>
    <columns>Channel_Name__c</columns>
    <columns>CampaignId__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Score__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>